<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_35sdp"
    android:paddingEnd="@dimen/_20sdp"
    tools:context=".ui.account.register.RegisterTermsAndCondition">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/terms_conditions_header"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/terms_condition_date_placeholder"
        android:textColor="#6A000000"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="#6A000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_marginBottom="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/terms_conditions_1.1" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_10ssp"
                android:text="@string/terms_conditions_1" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/terms_conditions_2.1" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/terms_conditions_2" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/terms_conditions_3.1" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/terms_conditions_3" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/terms_conditions_4.1" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/terms_conditions_4" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/terms_conditions_5.1" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/terms_conditions_5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="127dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDecline"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1" android:background="@drawable/register_terms_conditions_decline_button_bg"
                    android:fontFamily="@font/poppins"
                    android:text="@string/terms_conditions_decline"
                    android:textColor="@color/Theme.color"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAccept"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1" android:background="@drawable/register_terms_conditions_accept_button_bg"
                    android:fontFamily="@font/poppins"
                    android:text="@string/terms_conditions_accept"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>